--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "firebase": "^7.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-bootstrap-grid": "^3.0.5",
     "styled-components": "^4.4.1",
     "victory": "^34.0.0"
