--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^7.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fontawesome": "^1.7.1",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
